# P2S3

./: .gitignore  README.md
QtApp/: CMakeLists.txt  bluetoothTest.pro  main.cpp
QtApp/src/: BluetoothClient.cpp  BluetoothClient.h  BluetoothData.h  BluetoothDeviceFinder.cpp  BluetoothDeviceFinder.h  BluetoothStatusWidget.cpp  BluetoothStatusWidget.h  CircularGaugeWidget.cpp  CircularGaugeWidget.h  SwitchButton.cpp  SwitchButton.h  mainwindow.cpp  mainwindow.h  pid.cpp  pid.h
QtApp/styles/: stylesheet.css
VsCode/EspBluetoothTest/: platformio.ini
VsCode/EspBluetoothTest/include/: Generator.h  Motor.h  MyEspInclude.h
VsCode/EspBluetoothTest/src/: BLE.cpp  Generator.cpp  Json.cpp  Motor.cpp  main.cpp  pedale.cpp
